--- a/monitor.html
+++ b/monitor.html
@@ -52,9 +52,9 @@
 
         .video-js {width: 100%;height: 100%;position: relative}
 
-        .clearfixed:after {content: ".";display: block;height: 0;clear: both;visibility: hidden}
+        .clearfixed:after {content: " ";display: block;height: 0;clear: both;visibility: hidden}
 
-        .clearfixed {*+height: 1%;}
+        .clearfixed {+height: 1%;}
 
         .tabBox {border: 1px solid #15966d;border-radius: 6px;margin: 20px 0;overflow: hidden;}
 
@@ -205,12 +205,13 @@
 <script src="js/zepto.min.js"></script>
 <script src="js/base.js"></script>
 <script src="js/video.min.js"></script>
-<script src="js/echarts.min.js"></script>
-<script src="js/dataTool.min.js"></script>
+<script src="js/echarts.custom.min.js"></script>
 
-<script type="text/javascript">
+<script>
+    var videoWidth = document.body.clientWidth - 40;
+    $(".videoBox").height(videoWidth / 16 * 9 + 'px');
+
     function drawCanvas(options, timeDate, data1, data2, data3) {
-        console.log(options.name1.substring(0,4))
         var dom = document.getElementById("container");
         var myChart = echarts.init(dom);
         var app = {};
@@ -234,7 +235,7 @@
                         name: options.name1,
                         icon: 'circle',
                         textStyle: {
-                            fontSize:10,
+                            fontSize: 10,
                             width: '30%'
                         }
                     },
@@ -242,7 +243,7 @@
                         name: options.name2,
                         icon: 'circle',
                         textStyle: {
-                            fontSize:10,
+                            fontSize: 10,
                             width: '30%'
                         }
                     },
@@ -250,7 +251,7 @@
                         name: options.name3,
                         icon: 'circle',
                         textStyle: {
-                            fontSize:10,
+                            fontSize: 10,
                             width: '30%'
                         }
                     }
@@ -313,23 +314,6 @@
     }
 
 
-    var videoWidth = document.body.clientWidth - 40;
-    $(".videoBox").height(videoWidth / 16 * 9 + 'px')
-
-    options = {
-        preload: 'metadata',
-        controls: false,
-        loop: true,
-        poster: 'video/greenhouse.png',
-        sources: [{
-            src: 'video/greenhouse.mp4',
-            type: 'video/mp4'
-        }]
-    }
-    var myPlayer = videojs('my-video', options, function onPlayerReady() {
-        this.play();
-    });
-
     var timeArr = [], data1 = [], data12 = [], data13 = [], data2 = [], data22 = [], data23 = [], data3 = [],
         data32 = [], data33 = [], data4 = [], data42 = [], data43 = [], trData1, trData2, trData3;
     var temOptions = {
@@ -338,7 +322,9 @@
         name2: '中层空气温度',
         name3: '下层空气温度'
     }
+
     function getWeatherData(options, siteId, whice) {
+        whice = parseFloat(whice)
         $.ajax({
             type: 'GET',
             url: baseUrl + 'house/getOneGreenhouseInfo.do',
@@ -389,7 +375,6 @@
                         trData2 = data42;
                         trData3 = data43;
                     }
-
                     drawCanvas(options, timeArr, trData1, trData2, trData3)
                 } else {
                     alert(data.msg)
@@ -418,7 +403,7 @@
                         name2: '中层空气温度',
                         name3: '下层空气温度'
                     }
-                    getWeatherData(temOptions, siteId, index + 1)
+                    getWeatherData(temOptions, siteId, 1)
                 } else if (index === 1) {
                     var temOptions = {
                         title: '空气湿度折线图',
@@ -426,7 +411,7 @@
                         name2: '中层空气湿度',
                         name3: '下层空气湿度'
                     }
-                    getWeatherData(temOptions, siteId, index + 1)
+                    getWeatherData(temOptions, siteId, 2)
                 } else if (index === 2) {
                     var temOptions = {
                         title: '土壤温度折线图',
@@ -434,7 +419,7 @@
                         name2: '10cm土壤温度',
                         name3: '20cm土壤温度'
                     }
-                    getWeatherData(temOptions, siteId, index + 1)
+                    getWeatherData(temOptions, siteId, 3)
                 } else {
                     var temOptions = {
                         title: '土壤湿度折线图',
@@ -442,7 +427,7 @@
                         name2: '10cm土壤湿度',
                         name3: '20cm土壤湿度'
                     }
-                    getWeatherData(temOptions, siteId, index + 1)
+                    getWeatherData(temOptions, siteId, 4)
                 }
             }
         })
@@ -455,20 +440,21 @@
             if (className.search('active') === -1) {
                 $(this).addClass('active');
                 $(this).siblings().removeClass('active');
+                var fNum = $(".fourBtn .active").attr('class').toString().substring(4, 5)
                 if (index === 0) {
                     $(".tab > div").eq(0).addClass('active')
                     $(".tab > div").eq(1).removeClass('active')
                     $(".whice1").attr('class', 'whice whice1 active')
                     $(".whice2").removeClass('active')
                     siteId = 1
-                    getWeatherData(temOptions, 1, 1)
+                    getWeatherData(temOptions, 1, fNum)
                 } else {
                     $(".tab > div").eq(1).addClass('active')
                     $(".tab > div").eq(0).removeClass('active')
                     $(".whice3").attr('class', 'whice whice3 active')
                     $(".whice4").removeClass('active')
                     siteId = 5
-                    getWeatherData(temOptions, 5, 1)
+                    getWeatherData(temOptions, 5, fNum)
                 }
             }
         })
@@ -498,7 +484,19 @@
         })
     })
 
-
+    options = {
+        preload: 'metadata',
+        controls: false,
+        loop: true,
+        poster: 'https://img.snzfnm.com/greenhouse.mp4?vframe/jpg/offset/1',
+        sources: [{
+            src: 'https://img.snzfnm.com/greenhouse.mp4',
+            type: 'video/mp4'
+        }]
+    }
+    var myPlayer = videojs('my-video', options, function onPlayerReady() {
+        this.play();
+    });
 </script>
 </body>
 </html>
