--- a/agriInfo.html
+++ b/agriInfo.html
@@ -314,7 +314,7 @@
                                 // 无数据
                                 me.noData();
 
-                                $(".lists1").append(innHtml1)
+                                $(".lists1").append(innHtml1);
                                 me.resetload();
                             } else {
                                 tab1LoadEnd = true;
@@ -323,7 +323,7 @@
                                 // 无数据
                                 me.noData();
                                 me.resetload();
-                                alert(data.msg)
+                                alert(data.msg);
                             }
                         },
                         error: function(xhr, type){
@@ -372,7 +372,7 @@
                                 // 无数据
                                 me.noData();
 
-                                $(".lists2").append(innHtml2)
+                                $(".lists2").append(innHtml2);
                                 me.resetload();
                             } else {
                                 tab2LoadEnd = true;
@@ -381,7 +381,7 @@
                                 // 无数据
                                 me.noData();
                                 me.resetload();
-                                alert(data.msg)
+                                alert(data.msg);
                             }
                         },
                         error: function(xhr, type){
@@ -430,7 +430,7 @@
                                 // 无数据
                                 me.noData();
 
-                                $(".lists3").append(innHtml3)
+                                $(".lists3").append(innHtml3);
                                 me.resetload();
                             } else {
                                 tab3LoadEnd = true;
@@ -439,7 +439,7 @@
                                 // 无数据
                                 me.noData();
                                 me.resetload();
-                                alert(data.msg)
+                                alert(data.msg);
                             }
                         },
                         error: function(xhr, type){
