--- a/njyList.html
+++ b/njyList.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>灾情直报</title>
+    <title>农技耘</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
     <style>
         * {
@@ -215,11 +215,6 @@
     </style>
 </head>
 <body>
-<div class="header">
-    <span class="back"></span>
-    <span>灾情直报</span>
-    <button class="upVideo">发布</button>
-</div>
 <div class="content clearfixed">
     <div class="lists"></div>
 </div>
